# scsphacksaiexpo

./: .dockerignore  .gitignore  Dockerfile  README.md  codebase_snapshot.md  commands.txt  drone_params.json  generate_model.py  pyproject.toml  specification.md  world.sdf
.devcontainer/: Dockerfile  devcontainer.json  rebuild_plugin.sh  start_gazebo.sh
.gazebo/models/tesseract_nano/: model.config  model.sdf
gazebo_orchestrator_node/: package-lock.json  package.json  server.js
gazebo_orchestrator_node/test_clients/: test_barrel_roll.js
gazebo_orchestrator_node/trick_sequences/: barrel_roll.json
gazebo_plugin/: CMakeLists.txt
gazebo_plugin/include/: TrickExecutorPlugin.hh
gazebo_plugin/src/: TrickExecutorPlugin.cc
generated_models/x_quad_drone_generated/: model.config  model.sdf
